# Jump

./: .gitignore  Jump.cabal  LICENSE  Main  Makefile  README.md  config.mk
scripts/: auto_complete.bash  jump_function.bash  test.bash
src/: CustomGetOpt.hs  Main.hs
